force-app/main/default/objects/My_Step__c/My_Step__c.object-meta.xml
<CustomObject>
    <description>Single step along the path assigned to an associate</description>
    <label>My Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>