force-app/main/default/objects/My_Step__c/fields/Assigned_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team_Member__c</fullName>
    <label>Assigned Team Member</label>
    <length>100</length>
    <type>Text</type>
</CustomField>