force-app/main/default/objects/My_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Populated from the associated master step record during this record&apos;s creation</description>
    <inlineHelpText>Populated from the associated master step record during this record&apos;s creation</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>