force-app/main/default/objects/My_Step__c/fields/Detailed_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Instructions__c</fullName>
    <description>URL populated from the associated master step record during this record&apos;s creation</description>
    <inlineHelpText>URL populated from the associated master step record during this record&apos;s creation</inlineHelpText>
    <label>Detailed Instructions</label>
    <type>Url</type>
</CustomField>