force-app/main/default/objects/My_Step__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>New Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>