force-app/main/default/objects/My_Step__c/fields/My_Path__c.field-meta.xml
<CustomField>
    <fullName>My_Path__c</fullName>
    <description>Assigned path this step belongs to</description>
    <inlineHelpText>Assigned path this step belongs to</inlineHelpText>
    <label>My Path</label>
    <referenceTo>My_Path__c</referenceTo>
    <relationshipLabel>My Steps</relationshipLabel>
    <relationshipName>My_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>