force-app/main/default/objects/My_Step__c/fields/My_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>My_Step_Number__c</fullName>
    <label>My Step Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>