force-app/main/default/objects/My_Step__c/listViews/My_Assigned_Steps.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Steps</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Team_Member__c</field>
        <operation>equals</operation>
        <value>Paul Torres</value>
    </filters>
    <label>My Assigned Steps</label>
</ListView>