force-app/main/default/objects/My_Step__c/listViews/My_Steps.listView-meta.xml
<ListView>
    <fullName>My_Steps</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Steps</label>
</ListView>